--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,10 +13,21 @@
         <item name="android:windowBackground">@drawable/splashscreen</item>
     </style>
 
+    <!--Estilo activity toolbar-->
     <style name="barra_toolbar">
         <item name="android:background">@drawable/degradado_barra_principal</item>
         <item name="android:textColor">@color/white</item>
+    </style>
 
+    <!--Estilo actividad home-->
+    <style name="botones_home">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">30dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/corners_botones_home</item>
+        <item name="android:paddingStart">5dp</item>
+        <item name="android:paddingEnd">5dp</item>
     </style>
 
 </resources>
