--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -31,7 +31,7 @@
         app:layout_constraintVertical_bias="0.144" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnmostrar"
         style="@style/botones_home"
         android:text="Mostrar receta"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,7 +39,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.357" />
+        app:layout_constraintVertical_bias="0.357"/>
 
     <Button
         android:id="@+id/button2"
