--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -30,4 +30,13 @@
         <item name="android:paddingEnd">5dp</item>
     </style>
 
+
+    <style name="botones_formulario">
+        <item name="android:layout_width">200dp</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">#EEEEEE</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
 </resources>
