--- a/app/src/main/res/layout/activity_datos_usuario.xml
+++ b/app/src/main/res/layout/activity_datos_usuario.xml
@@ -35,6 +35,7 @@
         style="@style/botones_formulario"
         android:drawableStart="@drawable/icono_peso"
         android:hint="Peso Kg"
+        android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -48,6 +49,7 @@
         style="@style/botones_formulario"
         android:drawableStart="@drawable/icono_altura"
         android:hint="Altura"
+        android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -116,6 +118,7 @@
         style="@style/botones_formulario"
         android:drawableStart="@drawable/icono_edad"
         android:hint="Edad"
+        android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
