--- a/app/src/main/res/menu/menu_en_datosusuario.xml
+++ b/app/src/main/res/menu/menu_en_datosusuario.xml
@@ -5,7 +5,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".DatosUsuario">
+    tools:context=".Pages.DatosUsuario">
 
     <item android:id="@+id/informacion"
         android:title="Informacion"
