--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     android:id="@+id/ActivityAuthBinding"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Pages.AuthActivity"
+    tools:context=".PresentationDomain.AuthActivity"
     android:orientation="vertical"
     android:background="@drawable/home_background">
 
