--- a/app/src/main/res/menu/menu_en_activity.xml
+++ b/app/src/main/res/menu/menu_en_activity.xml
@@ -5,7 +5,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Pages.HomeActivity">
+    tools:context=".PresentationDomain.HomeActivity">
 
     <item android:id="@+id/informacion"
         android:title="Informacion"
