--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -51,7 +51,7 @@
 
 
         <Button
-            android:id="@+id/botonRegistro"
+            android:id="@+id/registerButton"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginEnd="5dp"
@@ -63,7 +63,7 @@
             android:textSize="35dp" />
 
         <Button
-            android:id="@+id/botonAcceso"
+            android:id="@+id/accessButton"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginStart="5dp"
